--- a/k8s/parser-deployment.yaml
+++ b/k8s/parser-deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: parser
-          image: parser-service:latest
+          image: parser-service:0.1.0
+          imagePullPolicy: Never # Force to use the local image
           args:
             - "-ip"
             - "0.0.0.0"
@@ -24,7 +25,3 @@ spec:
             - "8080"
           ports:
             - containerPort: 8080
-          resources:
-            limits:
-              memory: "256Mi"
-              cpu: "500m"
