--- a/k8s/scraper-deployment.yaml
+++ b/k8s/scraper-deployment.yaml
@@ -16,11 +16,17 @@ spec:
     spec:
       containers:
         - name: scraper
-          image: scraper-service:latest
+          image: scraper-service:0.1.0
+          imagePullPolicy: Never # Force to use the local image
           args:
             - "-parser"
             - "parser-service:8080"
-          resources:
-            limits:
-              memory: "256Mi"
-              cpu: "500m"
+            - "-db"
+            - "/data/products.db"
+          volumeMounts:
+            - name: sqlite-storage
+              mountPath: /data
+      volumes:
+        - name: sqlite-storage
+          persistentVolumeClaim:
+            claimName: sqlite-pvc
